--- a/blog-website/assets/styles/style.css
+++ b/blog-website/assets/styles/style.css
@@ -14,7 +14,53 @@ body{
     background-color: rgba(234, 217, 217, 0.852)
 }
 
+h1, h2, h3, h4, h5, h6{
+    margin-bottom: 1em;
+}
+
+footer{
+    background-color: rgb(0,0,0);
+    color: rgba(234, 217, 217, 0.852);
+    font-size: .9em;
+    padding: 1.11em 0;
+
+}
+
 /* CLASSES */
+.blog-post header{
+    text-align: center;
+    margin-top: 4em;
+}
+
+.blog-post .category{
+    text-transform: lowercase;
+}
+
+.blog-post .title{
+    text-transform: uppercase;
+}
+
+.blog-post .image{
+    margin: 2em 0;
+}
+
+.blog-post .subtitle{
+    margin-top: 2em;
+}
+
+.blog-post .summary{
+    padding-left: 40px;
+}
+
+.blog-post .summary li{
+    margin-top: 1em;
+}
+.rounded-image img{
+    display: block;
+    width: 100%;
+    border-radius: 8px;
+}
+
 .button {
     background-color: goldenrod;
     padding: .5em .75em;
