--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -1,16 +1,48 @@
-/* Class called "red" that can be used wherever we want */
-.red{
-    color:red;
-}
+/*
+    CSS comments are written like this.
+    This is very similar to other programming languages.
+*/
 
-ol li {
+/*
+    * is used to refer to 'everything'. We can then override 
+    certain rules later on.
+*/
+*{
+    /* Some CSS properties need a special prefix to make sure they work on all browsers. */
+    box-sizing: border-box; /* Opera/IE 8+ */
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+
+    padding:10px;
+    margin:0px;
+}
+/*
+    Basic CSS can be written using the tag (without brackets)
+    followed by a set of curley brackets. Each command takes up
+    its own line, and is concluded with a semi-colon.
+*/
+ul li {
     color: rgb(139, 110, 75);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-
+/*
+    We can create a styling rule that is applied to multiple 
+    elements by linking them together with a comma. 
+    
+    We can also target a type of elements that is within
+    another type by adding a space between the types.
+*/
 table, table tr td, table tr th{
     border: 1px black solid;
     border-spacing: 0px;
     border-collapse:collapse;
+}
+
+/*
+    Classes are created to have a style rule available within the page
+    which is then applied to specific elements within the HTML document.
+*/
+.red{
+    color:red;
 }
