--- a/blog-website/assets/styles/style.css
+++ b/blog-website/assets/styles/style.css
@@ -175,8 +175,9 @@ footer{
     border-color:#a1a3a5;
     background-color: #ebebeb;
     border-radius: 8px;
+}
     .jumbotron {
-        background-image: url(../images/darktide.webp);
+        background-image: url(../images/hamrun\ team.jpeg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -201,7 +202,7 @@ footer{
         height:90%;
         width:auto;
         position: relative;
-        transform: translateX(-43%);
+        transform:translateX(-13%);
     }
     
     .about-image figcaption, .image figcaption {
